--- a/Original.html
+++ b/Original.html
@@ -339,14 +339,14 @@
     <body>
         <section class="main">
             <div id="logo">
-                <label for="nav-toggle-cb" id="nav-toggle">&#9776;&nbsp;&nbsp;Configuracion de ESP32-CAM</label>
+                <label for="nav-toggle-cb" id="nav-toggle">&#9776;&nbsp;&nbsp;Toggle OV2640 settings</label>
             </div>
             <div id="content">
                 <div id="sidebar">
                     <input type="checkbox" id="nav-toggle-cb" checked="checked">
                     <nav id="menu">
                         <div class="input-group" id="framesize-group">
-                            <label for="framesize">Resolucion</label>
+                            <label for="framesize">Resolution</label>
                             <select id="framesize" class="default-action">
                                 <option value="10">UXGA(1600x1200)</option>
                                 <option value="9">SXGA(1280x1024)</option>
@@ -360,38 +360,38 @@
                             </select>
                         </div>
                         <div class="input-group" id="quality-group">
-                            <label for="quality">Calidad</label>
+                            <label for="quality">Quality</label>
                             <div class="range-min">10</div>
                             <input type="range" id="quality" min="10" max="63" value="10" class="default-action">
                             <div class="range-max">63</div>
                         </div>
                         <div class="input-group" id="brightness-group">
-                            <label for="brightness">Brillo</label>
+                            <label for="brightness">Brightness</label>
                             <div class="range-min">-2</div>
                             <input type="range" id="brightness" min="-2" max="2" value="0" class="default-action">
                             <div class="range-max">2</div>
                         </div>
                         <div class="input-group" id="contrast-group">
-                            <label for="contrast">Contraste</label>
+                            <label for="contrast">Contrast</label>
                             <div class="range-min">-2</div>
                             <input type="range" id="contrast" min="-2" max="2" value="0" class="default-action">
                             <div class="range-max">2</div>
                         </div>
                         <div class="input-group" id="saturation-group">
-                            <label for="saturation">Saturacion</label>
+                            <label for="saturation">Saturation</label>
                             <div class="range-min">-2</div>
                             <input type="range" id="saturation" min="-2" max="2" value="0" class="default-action">
                             <div class="range-max">2</div>
                         </div>
                         <div class="input-group" id="special_effect-group">
-                            <label for="special_effect">Efecto Espcial</label>
+                            <label for="special_effect">Special Effect</label>
                             <select id="special_effect" class="default-action">
                                 <option value="0" selected="selected">No Effect</option>
-                                <option value="1">Negativo</option>
-                                <option value="2">EScala De Grises</option>
-                                <option value="3">Tinte Rojo</option>
-                                <option value="4">Tinte Verde</option>
-                                <option value="5">Tinte Azul</option>
+                                <option value="1">Negative</option>
+                                <option value="2">Grayscale</option>
+                                <option value="3">Red Tint</option>
+                                <option value="4">Green Tint</option>
+                                <option value="5">Blue Tint</option>
                                 <option value="6">Sepia</option>
                             </select>
                         </div>
@@ -440,9 +440,9 @@
                             <div class="range-max">2</div>
                         </div>
                         <div class="input-group" id="aec_value-group">
-                            <label for="aec_value">Exposicion</label>
+                            <label for="aec_value">Exposure</label>
                             <div class="range-min">0</div>
-                            <input type="number" id="aec_value" min="0" max="1200" value="204" class="default-action">
+                            <input type="range" id="aec_value" min="0" max="1200" value="204" class="default-action">
                             <div class="range-max">1200</div>
                         </div>
                         <div class="input-group" id="agc-group">
@@ -453,7 +453,7 @@
                             </div>
                         </div>
                         <div class="input-group hidden" id="agc_gain-group">
-                            <label for="agc_gain">Ganancia</label>
+                            <label for="agc_gain">Gain</label>
                             <div class="range-min">1x</div>
                             <input type="range" id="agc_gain" min="0" max="30" value="5" class="default-action">
                             <div class="range-max">31x</div>
@@ -486,10 +486,24 @@
                             </div>
                         </div>
                         <div class="input-group" id="lenc-group">
-                            <label for="lenc">Correccion del lente</label>
+                            <label for="lenc">Lens Correction</label>
                             <div class="switch">
                                 <input id="lenc" type="checkbox" class="default-action" checked="checked">
                                 <label class="slider" for="lenc"></label>
+                            </div>
+                        </div>
+                        <div class="input-group" id="hmirror-group">
+                            <label for="hmirror">H-Mirror</label>
+                            <div class="switch">
+                                <input id="hmirror" type="checkbox" class="default-action" checked="checked">
+                                <label class="slider" for="hmirror"></label>
+                            </div>
+                        </div>
+                        <div class="input-group" id="vflip-group">
+                            <label for="vflip">V-Flip</label>
+                            <div class="switch">
+                                <input id="vflip" type="checkbox" class="default-action" checked="checked">
+                                <label class="slider" for="vflip"></label>
                             </div>
                         </div>
                         <div class="input-group" id="dcw-group">
@@ -499,23 +513,37 @@
                                 <label class="slider" for="dcw"></label>
                             </div>
                         </div>
-                        <div class="input-group" id="flash-group">
-                            <label for="flash">Flash</label>
+                        <div class="input-group" id="colorbar-group">
+                            <label for="colorbar">Color Bar</label>
                             <div class="switch">
-                                <input id="flash" type="checkbox" class="default-action">
-                                <label class="slider" for="flash"></label>
+                                <input id="colorbar" type="checkbox" class="default-action">
+                                <label class="slider" for="colorbar"></label>
+                            </div>
+                        </div>
+                        <div class="input-group" id="face_detect-group">
+                            <label for="face_detect">Face Detection</label>
+                            <div class="switch">
+                                <input id="face_detect" type="checkbox" class="default-action">
+                                <label class="slider" for="face_detect"></label>
+                            </div>
+                        </div>
+                        <div class="input-group" id="face_recognize-group">
+                            <label for="face_recognize">Face Recognition</label>
+                            <div class="switch">
+                                <input id="face_recognize" type="checkbox" class="default-action">
+                                <label class="slider" for="face_recognize"></label>
                             </div>
                         </div>
                         <section id="buttons">
-                            <button id="get-still">Tomar Foto</button>
-                            <button id="toggle-stream">Iniciar Stream</button>
+                            <button id="get-still">Get Still</button>
+                            <button id="toggle-stream">Start Stream</button>
                             <button id="face_enroll" class="disabled" disabled="disabled">Enroll Face</button>
                         </section>
                     </nav>
                 </div>
                 <figure>
                     <div id="stream-container" class="image-container hidden">
-                        <div class="close" id="close-stream">Ã</div>
+                        <div class="close" id="close-stream">×</div>
                         <img id="stream" src="">
                     </div>
                 </figure>
@@ -572,36 +600,6 @@ document.addEventListener('DOMContentLoaded', function (event) {
         value ? show(wb) : hide(wb)
       } else if(el.id === "face_recognize"){
         value ? enable(enrollButton) : disable(enrollButton)
-      } else if(el.id === "ges"){
-        if (value == 0) {
-          hide(ges_gpio)
-          hide(ges_vsync)
-          hide(ges_offset)
-          hide(ges_repeat)
-          hide(ges_on)
-          hide(ges_off)
-        } else if (value == 1) {
-          show(ges_gpio)
-          show(ges_vsync)
-          show(ges_offset)
-          hide(ges_repeat)
-          show(ges_on)
-          hide(ges_off)
-        } else if (value == 2) {
-          show(ges_gpio)
-          show(ges_vsync)
-          show(ges_offset)
-          show(ges_repeat)
-          show(ges_on)
-          show(ges_off)
-        } else if (value == 3) {
-          show(ges_gpio)
-          show(ges_vsync)
-          show(ges_offset)
-          hide(ges_repeat)
-          show(ges_on)
-          show(ges_off)
-        }
       }
     }
   }
@@ -612,7 +610,6 @@ document.addEventListener('DOMContentLoaded', function (event) {
       case 'checkbox':
         value = el.checked ? 1 : 0
         break
-      case 'number':
       case 'range':
       case 'select-one':
         value = el.value
@@ -641,7 +638,7 @@ document.addEventListener('DOMContentLoaded', function (event) {
       }
     })
 
-  // read initial values (Leer Valores Iniciales)
+  // read initial values
   fetch(`${baseHost}/status`)
     .then(function (response) {
       return response.json()
@@ -672,7 +669,7 @@ document.addEventListener('DOMContentLoaded', function (event) {
     streamButton.innerHTML = 'Stop Stream'
   }
 
-  // Attach actions to buttons (Adjustar Acciones a botones)
+  // Attach actions to buttons
   stillButton.onclick = () => {
     stopStream()
     view.src = `${baseHost}/capture?_cb=${Date.now()}`
@@ -697,15 +694,15 @@ document.addEventListener('DOMContentLoaded', function (event) {
     updateConfig(enrollButton)
   }
 
-  // Attach default on change action (Adjuntar Accion de cambio por defecto)
+  // Attach default on change action
   document
     .querySelectorAll('.default-action')
     .forEach(el => {
       el.onchange = () => updateConfig(el)
     })
 
-  // Custom actions (Acciones personalizadas)
-  // Gain (Ganancia))
+  // Custom actions
+  // Gain
   const agc = document.getElementById('agc')
   const agcGain = document.getElementById('agc_gain-group')
   const gainCeiling = document.getElementById('gainceiling-group')
@@ -720,7 +717,7 @@ document.addEventListener('DOMContentLoaded', function (event) {
     }
   }
 
-  // Exposure (Exposicion)
+  // Exposure
   const aec = document.getElementById('aec')
   const exposure = document.getElementById('aec_value-group')
   aec.onchange = () => {
@@ -728,7 +725,7 @@ document.addEventListener('DOMContentLoaded', function (event) {
     aec.checked ? hide(exposure) : show(exposure)
   }
 
-  // AWB (Balance de Blanco Automatico)
+  // AWB
   const awb = document.getElementById('awb_gain')
   const wb = document.getElementById('wb_mode-group')
   awb.onchange = () => {
@@ -736,7 +733,7 @@ document.addEventListener('DOMContentLoaded', function (event) {
     awb.checked ? show(wb) : hide(wb)
   }
 
-  // Detection and framesize (deteccion y tamaño de fotograma)
+  // Detection and framesize
   const detect = document.getElementById('face_detect')
   const recognize = document.getElementById('face_recognize')
   const framesize = document.getElementById('framesize')
@@ -776,71 +773,6 @@ document.addEventListener('DOMContentLoaded', function (event) {
       disable(enrollButton)
     }
   }
-
-  // Global external shutter (Codigo creado por usuario)
-  const ges = document.getElementById('ges')
-  const ges_gpio = document.getElementById('ges_gpio-group')
-  const ges_vsync = document.getElementById('ges_vsync-group')
-  const ges_offset = document.getElementById('ges_offset-group')
-  const ges_repeat = document.getElementById('ges_repeat-group')
-  const ges_on = document.getElementById('ges_on-group')
-  const ges_off = document.getElementById('ges_off-group')
-  const flash = document.getElementById('flash-group')
-  ges.onchange = () => {
-    updateConfig(ges)
-    if (ges.value == 0) {
-      hide(ges_gpio)
-      hide(ges_vsync)
-      hide(ges_offset)
-      hide(ges_repeat)
-      hide(ges_on)
-      hide(ges_off)
-    } else if (ges.value == 1) {
-      show(ges_gpio)
-      show(ges_vsync)
-      show(ges_offset)
-      hide(ges_repeat)
-      show(ges_on)
-      hide(ges_off)
-      hide(flash)
-    } else if (ges.value == 2) {
-      show(ges_gpio)
-      show(ges_vsync)
-      show(ges_offset)
-      show(ges_repeat)
-      show(ges_on)
-      show(ges_off)
-      hide(flash)
-    } else if (ges.value == 3) {
-      show(ges_gpio)
-      show(ges_vsync)
-      show(ges_offset)
-      hide(ges_repeat)
-      show(ges_on)
-      show(ges_off)
-      hide(flash)
-    }
-  }
-
-  const doitButton = document.getElementById('ges_doit')
-  const ges_offset_value = document.getElementById('ges_offset')
-  const ges_vsync_value = document.getElementById('ges_vsync')
-
-  function sleep(ms) {
-    return new Promise(resolve => setTimeout(resolve, ms));
-  }
-
-  async function doit(ms) {
-    updateConfig(ges_vsync_value)
-    updateConfig(doitButton)
-    await sleep(ms)
-    stopStream();
-  }
-
-  doitButton.onclick = () => {
-    doit(ges_offset_value.value)
-  }
-
 })
 
         </script>
